--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,8 @@
   "routes": [{ "src": "/.*", "dest": "app.py" }],
   "crons": [
     {
-      "schedule": "0 9 * * *",
-      "command": "python app.py"
+      "path": "/run",
+      "schedule": "0 9 * * *"
     }
   ]
 }
